--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Aston_HW_4_Fragments_20</string>
+    <string name="app_name">Aston_HW_4_Fragments</string>
+    <string name="exit">Exit</string>
+    <string name="are_you_really_want">Are you really want to exit?</string>
+    <string name="yes">Yes\n</string>
+    <string name="no">No</string>
 </resources>
